2008-01-30 Andreas Schmitz <schmitz@lat-lon.de>
      src/de/latlon/deejump/plugin/style/VertexStyleChooser.java,
      src/de/latlon/deejump/plugin/style/DeeRenderingStylePanel.java:
      Fixed preview of point symbols.

2008-01-30 Andreas Schmitz <schmitz@lat-lon.de>
      src/de/latlon/deejump/plugin/style/layerstyle2sld.xsl,
      src/de/latlon/deejump/plugin/style/VertexStyleChooser.java:
      Fixed/added handling of custom point symbols (deeJUMP).

2008-01-30 Andreas Schmitz <schmitz@lat-lon.de>
      src/de/latlon/deejump/plugin/style/PointSymbolizerBasicStyle.java2xml,
      src/de/latlon/deejump/plugin/style/DeeColorThemingTableModel.java,
      src/de/latlon/deejump/plugin/style/layerstyle2sld.xsl,
      src/de/latlon/deejump/plugin/style/CrossVertexStyle.java2xml,
      src/de/latlon/deejump/plugin/style/CircleVertexStyle.java2xml,
      src/de/latlon/deejump/plugin/style/TriangleVertexStyle.java2xml,
      src/de/latlon/deejump/plugin/style/StarVertexStyle.java2xml,
      src/de/latlon/deejump/plugin/style/PointSymbolizerBasicStyle.java,
      src/com/vividsolutions/jump/workbench/ui/renderer/style/VertexStyle.java:
      Removed more unused classes, fixed SLD-Export for point symbols.

2008-01-30 Andreas Schmitz <schmitz@lat-lon.de>
      src/de/latlon/deejump/plugin/style/layerstyle2sld.xsl,
      src/de/latlon/deejump/plugin/style/DeeColorThemingStylePanel.java,
      src/de/latlon/deejump/plugin/style/DeeRangeColorThemingState.java,
      src/de/latlon/deejump/plugin/style/DeeChangeStylesPlugIn.java,
      src/de/latlon/deejump/plugin/style/DeeColorThemingStyle.java,
      src/de/latlon/deejump/plugin/style/DeeRenderingStylePanel.java:
      Removed unused classes, fixed bugs with deeJUMP styles dialog.

2008-01-25 Andreas Schmitz <schmitz@lat-lon.de>
      src/com/vividsolutions/wms/WMService.java,
      src/com/vividsolutions/jump/workbench/ui/plugin/wms/URLWizardPanel.java:
      Made the previous WMS changes more backwards compatible.
